@@ -162,7 +162,7 @@ class CGI
       cookies = Hash.new([])
       return cookies unless raw_cookie
 
-      raw_cookie.split(/[;,]\s?/).each do |pairs|
+      raw_cookie.split(/;\s?/).each do |pairs|
         name, values = pairs.split('=',2)
         next unless name and values
         name = CGI.unescape(name)
