@@ -1,3 +1,9 @@
+Tue Sep 27 12:07:17 2016  NARUSE, Yui  <naruse@ruby-lang.org>
+
+	* lib/cgi/cookie.rb (parse): don't allow , as a separator. [Bug #12791]
+
+	* lib/webrick/cookie.rb (parse): ditto.
+
 Mon Sep 26 21:37:21 2016  Akinori MUSHA  <knu@iDaemons.org>
 
 	* man/erb.1, man/irb.1, man/ri.1, man/ruby.1: Remove Ns before
